Better unlocking of achievements

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -113,6 +113,24 @@ header {
       }
     }
 
+#achievement_alert {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 3px 10px #777;
+  display: none;
+  left: 50%;
+  margin-left: -125px;
+  padding: 1em 1em 0;
+  position: fixed;
+  text-align: center;
+  top: 1em;
+  width: 250px;
+
+  h1 {
+    font-size: 18px;
+  }
+}
+
 
 // Main content block
 // ========================================================
