--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,7 +9,7 @@
 <script src='/js/cheet.min.js' type='text/javascript'></script>
 <script type='text/javascript'>
   cheet('↑ ↑ ↓ ↓ ← → ← → b a', function () {
-    alert('Voilà!');
+    achievementGet(11);
   });
 
   $('#big-fonts').click(function (e) {
