--- a/views/leaderboards.ejs
+++ b/views/leaderboards.ejs
@@ -1,5 +1,5 @@
 <h1>Leaderboards</h1>
 
 <% for (var i = 0; i < scores.length; i++) { %>
-  <h3><%= scores[i].score %> points in level <%= scores[i].level %> by user <%= scores[i].user %></h3>
+  <h3><%= scores[i].score %> points on question <%= scores[i].question_id %> by user <%= scores[i].user %></h3>
 <% } %>
