--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,7 +38,8 @@
       if (data) {
         $('#achievement_alert').show();
         $('#achievement_text').html(data);
-
+        $('<audio id="achievementAudio"><source src="/victory_fanfare.mp3" type="audio/mpeg"></audio>').appendTo('body');
+        document.getElementById('achievementAudio').play();
         setTimeout(function() {
           $('#achievement_alert').hide();
         }, 3000);
