--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,6 +16,7 @@
 
 <p>Joined: <%= user.createdAt %></p>
 
+<br>
 
 <h2>Progress (+ scores)</h2>
 
@@ -24,10 +25,9 @@
 <% } %>
 
 <% for (var i = 0; i < scores.length; i++) { %>
-  <h3><%= scores[i].score %> points in level <%= scores[i].level %></h3>
+  <p><%= scores[i].score %> points in level <%= scores[i].question_id %></p>
 <% } %>
 
-<br>
 <br>
 
 <h2>Achievements</h2>
