--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,13 +36,13 @@
   function achievementGet(id) {
     $.post('/achievement/' + id, function (data) {
       if (data) {
-        $('#achievement_alert').show();
+        $('#achievement_alert').addClass('achievement_show');
         $('#achievement_text').html(data);
         $('<audio id="achievementAudio"><source src="/victory_fanfare.mp3" type="audio/mpeg"></audio>').appendTo('body');
         document.getElementById('achievementAudio').play();
         setTimeout(function() {
-          $('#achievement_alert').hide();
-        }, 3000);
+          $('#achievement_alert').removeClass('achievement_show');
+        }, 6500);
       }
     });
   }
