--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -45,12 +45,12 @@
         <button class='quiz-submit' id="submit-<%= i %>">Submit</button>
 
         <!-- this section is for showing answer using post -->
-        <form role='form' action='/tutorials/<%= type %>/<%= tutorial.level_num %>' method='post' id="showAns">
-          <input type="hidden" value=<%= questions[i].question_id %> name='questionID' readonly>
+          <form role='form' action='/tutorials/<%= type %>/<%= tutorial.level_num %>' method='post' class="showAns">
+            <input type="hidden" value=<%= questions[i].question_id %> name='questionID' readonly>
 
-          <input type='submit' value='Show Answer'>
+            <input type='submit' value='Show Answer'>
 
-        </form>
+          </form>
       </div>
 
 
@@ -65,8 +65,9 @@
 </div>
 
 <script>
+
   // Attach a submit handler to the form
-  $("#showAns").submit(function (e) {
+  $(".showAns").submit(function (e) {
 
     // Stop form from submitting normally
     e.preventDefault();
