--- a/views/leaderboards.ejs
+++ b/views/leaderboards.ejs
@@ -1,5 +1,21 @@
 <h1>Leaderboards</h1>
 
-<% for (var i = 0; i < scores.length; i++) { %>
-  <h3><%= scores[i].score %> points on question <%= scores[i].question_id %> by user <%= scores[i].user %></h3>
+<% var ranks = [] %>
+
+<% for (var i = 0; i < user.length; i++) { %>
+  <% var theScore= 0 %>
+  <% var theName = user[i].username %>
+
+  <% for (var j = 0; j < scores.length; j++) { %>
+    <% if (user[i].id == scores[j].user) { %>
+      <% theScore = theScore + scores[j].score %>
+    <% } %>
+  <% } %>
+
+  <% var info = {name: theName, score: theScore} %>
+  <% ranks[i] = info %>
+<% } %>
+
+<% for (var i = 0; i < ranks.length; i++) { %>
+	<h3><%= ranks[i].name %> has <%= ranks[i].score %> points<h3>
 <% } %>
