--- a/views/leaderboards.ejs
+++ b/views/leaderboards.ejs
@@ -17,5 +17,5 @@
 <% } %>
 
 <% for (var i = 0; i < ranks.length; i++) { %>
-	<h3><%= ranks[i].name %> has <%= ranks[i].score %> points<h3>
+	<h3> <%= i + 1 %>. <%= ranks[i].name %> has <%= ranks[i].score %> points<h3>
 <% } %>
