--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -53,6 +53,9 @@
       </div>
     <% } %>
 
+    <p id='score-tag'>Score:</p>
+    <p id='score'>0</p>
+
     <a class='ref-link' target='_blank' href="/ref/<%= type %>">Reference sheet</a>
     <a class='ref-link' target='_blank' href="#" id='btn-toohard'>This is too hard!</a>
   <% } %>
@@ -87,30 +90,44 @@
       achievementGet(1);
     });
 
+
+    // Scoring
+    var difficulty = <%= tutorial.difficulty %>;
+    var score = 100 * difficulty;
+    $("#score").text(score);
+    var threshold = Math.ceil(score * 0.75);
+    var seconds = 0
+    var timer = setInterval(function(){ secTimer() }, 1000);
+    //var start = Date.now();
+    //var end = 0;
+    var errors = 0;
+
+    function secTimer() {
+      ++seconds;
+      if ( score >= 1 ) {
+        --score;
+        $("#score").text(score);
+      }
+    }
+
     $('.show-answer').click(function (e) {
       // Fetch the answer with a POST call
       $.post(this.dataset.url, { questionID: this.dataset.questionid }, function (data) {
         alert(data);
       });
 
+      // Set score to 0 for seeing the answer.
+      score = 0;
+      $("#score").text(score);
+
       e.preventDefault();
     });
-
-
-    // Scoring
-    var difficulty = <%= tutorial.difficulty %>;
-    var score = 100 * difficulty;
-    var threshold = Math.ceil(score * 0.75);
-    var start = Date.now();
-    var end = 0;
-    var errors = 0;
 
     <% for (var i = 0; i < questions.length; i++) { %>
       document.getElementById("submit-<%= i %>").onclick = function (event) {
         event.stopPropagation();
 
         // Check answer
-        // TODO: POST call to check answer
         $("#submit-<%= i %>").click(function (e) {
 
             // Gets the user submitted solution.
@@ -122,16 +139,27 @@
             // Uses a POST call to find out if the user was correct or not.
             $.post(this.dataset.url, { user_solution : submitted, question_id : this.dataset.questionid },
               function (data) {
-                alert(data);
+                
+                // If the user was correct (data here is either `true` or `false`)
+                if (data) {
+                  alert("Question <%= i %>: Correct!");
+                }
+                else {
+                  ++errors;
+                  score -= Math.pow(2, errors);
+                  $("#score").text(score);
+                }
+
             });
 
             e.preventDefault();
           });
-
+/*
         // Score
         end = Date.now();
         score -= (end - start) / 1000;
-
+*/
+        /*
         // Ben's old answer validation
         // TODO: replace this with POST call (above)
         if (document.getElementById("open_answer-<%= i %>")) {
@@ -154,7 +182,10 @@
             score = score - Math.pow(2, errors);
             alert("Question <%= i %>: Incorrect...");
           }
-        }
+        }*/
+
+        // Stop the seconds counter
+        clearInterval(timer);
 
         if (score <= 0) { score = 0; }
 
@@ -168,12 +199,16 @@
           alert("You failed! You got: " + score + " but needed: " + threshold);
         }
 
-        // Achievements?
+        // Score-based achievements
+
+        // Fail an exercise 'achievement'
         if (score < threshold) {
           achievementGet(8);
         }
 
-        if (end - start <= 30000) {
+        // Finish exercise in 30 seconds!
+        // TODO: Rework using Intervals
+        if (seconds <= 30000) {
           achievementGet(2);
         }
 
