not great achievement 5

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -66,4 +66,8 @@
 
 <script>
   achievementGet(10);
+  // completing all exercises
+  if (scores.length == 14) {
+    achievementGet(5);
+  }
 </script>
