Proofreading ref sheets

--- a/views/ref_bases.ejs
+++ b/views/ref_bases.ejs
@@ -6,7 +6,7 @@
 
 <ol>
   <li>
-    Number the digits starting from 0 and going to the right. The leftmost digit should end up as (number of digits) - 1 <br>
+    Number the digits starting from 0 and going towards the left. The leftmost digit should end up as (number of digits) - 1 <br>
 
     ex. 10110010<br><br>
 
@@ -55,7 +55,7 @@
   <br>
 
   <li>
-    Sum the results from the last step. This is the decimal form of the original binary number! <br>
+    Sum the results from the last step.<br>
 
     ex. 128 + 0 + 32 + 16 + 0 + 0 + 2 + 0 = 178
   </li>
@@ -87,7 +87,7 @@
   <br>
 
   <li>
-    Append the remainders, starting with the remainder from the last division as the leftmost bit and the remainder from the first division as the rightmost bit. This is your binary value.<br>
+    Append the remainders, starting with the remainder from the last division as the leftmost bit and the remainder from the first division as the rightmost bit.<br>
 
     ex. 101010
   </li>
@@ -152,7 +152,7 @@
   <br>
 
   <li>
-    Append the sums in order. This is your hexadecimal value! Remember that hex number 10-15 are represented by the letters A-F, respectively.<br>
+    Append the sums in order. Remember that hex number 10-15 are represented by the letters A-F, respectively.<br>
 
     ex. 2 11 = 2B
   </li>
@@ -182,7 +182,7 @@
   <br>
 
   <li>
-    Append the groups together in order. You're done!<br>
+    Append the groups together in order.<br>
 
     ex. 1011 0010 &#8594; 10110010
   </li>
@@ -226,7 +226,7 @@
   <br>
 
   <li>
-    Append the remainders, with the remainder from the last division as the leftmost bit and the remainder from the first division as the rightmost bit. This is your hexadecimal value.<br>
+    Append the remainders, with the remainder from the last division as the leftmost bit and the remainder from the first division as the rightmost bit.<br>
 
     ex. 7DF
   </li>
@@ -249,7 +249,7 @@
   <br>
 
   <li>
-    Number the digits starting from 0 and going to the right. The leftmost digit should end up as (number of digits) - 1<br>
+    Number the digits starting from 0 and going towards the left. The leftmost digit should end up as (number of digits) - 1<br>
 
     ex.<br>
 
@@ -289,7 +289,7 @@
   <br>
 
   <li>
-    Sum the results from the last step. This is the your decimal number.<br>
+    Sum the results from the last step.<br>
 
     ex. 61440 + 3584 + 32 + 2 = 65058
   </li>
