Break lines if too long

--- a/assets/styles/_core.scss
+++ b/assets/styles/_core.scss
@@ -52,8 +52,12 @@ h4 {
 
 /** Paragraphs */
 
-p + p {
-  margin-bottom: 1.125em;
+p {
+  word-break: break-word;
+
+  & + p {
+    margin-bottom: 1.125em;
+  }
 }
 
 
