--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -23,7 +23,7 @@
 
       <br>
 
-      <a href='/auth/twitter' role='button'><img src="/images/twitter-link.png"></a>
+      <a href='/auth/twitter' role='button'><img src="/images/twitter-button.png"></a>
     </div>
   <% } %>
 </div>
