WIP fix for quiz

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -79,8 +79,9 @@
   var joinedDate = document.getElementById("joined");
   var date = joinedDate.innerHTML.split(/[ ]+/);
   var d = date[5].split(/[:]+/)
-  if (parseInt(d[0]) < 5) {
+  if (parseInt(d[0], 10) < 5) {
     achievementGet(9)
   }
+
   achievementGet(10);
 </script>
