--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -76,9 +76,9 @@
 </table>
 
 <script>
-  var joinedDate = document.getElementById("joined");
-  var date = joinedDate.innerHTML.split(/[ ]+/);
+  var date = document.getElementById('joined').innerHTML.split(/[ ]+/);
   var d = date[5].split(/[:]+/)
+
   if (parseInt(d[0], 10) < 5) {
     achievementGet(9)
   }
